helm/nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vllm-nodeport
  namespace: vllm
spec:
  type: NodePort
  selector:
    model: "qwen-tiny"
    helm-release-name: "vllm-local"
    app.kubernetes.io/component: serving-engine
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
